@@ -2,6 +2,8 @@
 
 TODO: add ClientAlerts and BestMatch backend
 
+- added patch() method to JSON backend
+
 0.29 Wed Aug  1 17:34:01 PDT 2012
 - add IAF Token support to Trading module
 
